--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:h2:mem:arkve;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:ave;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -37,3 +37,9 @@ spring:
     properties.hibernate.jdbc.lob.non_contextual_creation: true
 management:
   endpoints.web.exposure.include: health,info
+logging:
+  file:
+    name: logs/ave-app.log
+  level:
+    root: INFO
+    org.springframework.web: DEBUG
