--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<org.mapstruct.version>1.6.3</org.mapstruct.version>
+		<org.mapstruct.version>1.6.2</org.mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -107,6 +107,13 @@
 			<version>${org.mapstruct.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
@@ -126,14 +133,14 @@
 						<googleJavaFormat/>
 					</java>
 				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>apply</goal>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>apply</goal>-->
+<!--							<goal>check</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
 			</plugin>
 
 			<plugin>
@@ -141,7 +148,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<release>21</release>
+					<release>${java.version}</release>
 					<annotationProcessorPaths>
 
 						<path>
@@ -152,7 +159,7 @@
                         <path>
                           <groupId>org.projectlombok</groupId>
                           <artifactId>lombok</artifactId>
-                          <version>1.18.32</version>
+                          <version>1.18.36</version>
                         </path>
                         <path>
                           <groupId>org.projectlombok</groupId>
