--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
+		<springdoc.version>2.8.13</springdoc.version>
 		<java.version>21</java.version>
 		<org.mapstruct.version>1.6.2</org.mapstruct.version>
 	</properties>
@@ -98,7 +99,13 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.6.0</version>
+			<version>${springdoc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-scalar</artifactId>
+			<version>2.8.13</version>
 		</dependency>
 
 		<dependency>
