--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,15 @@ spring:
     baseline-on-migrate: true
     baseline-version: 1
     locations: classpath:db/migration
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://securetoken.google.com/${FIREBASE_PROJECT_ID}
+app:
+  security:
+    firebase:
+      audience: ${FIREBASE_PROJECT_ID}
 management:
   endpoints.web.exposure.include: health,info
 logging:
@@ -70,6 +79,15 @@ spring:
     baseline-on-migrate: true
     baseline-version: 1
     locations: classpath:db/migration
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://securetoken.google.com/${FIREBASE_PROJECT_ID}
+app:
+  security:
+    firebase:
+      audience: ${FIREBASE_PROJECT_ID}
 logging:
   level:
     root: INFO
