--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,15 @@ spring:
     properties.hibernate.format_sql: true
   h2:
     console.enabled: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://securetoken.google.com/${FIREBASE_PROJECT_ID}
+app:
+  security:
+    firebase:
+      audience: ${FIREBASE_PROJECT_ID}
 
 ---
 spring:
