--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
       ddl-auto: update
     show-sql: true
     properties.hibernate.format_sql: true
+  flyway:
+    enabled: false # Disable Flyway in dev (H2) to avoid PostgreSQL-specific SQL like TIMESTAMPTZ
   h2:
     console.enabled: true
   security:
