--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,8 @@ app:
   security:
     firebase:
       audience: ${FIREBASE_PROJECT_ID}
+  cors:
+    allowed-origins: http://localhost:4200
 
 ---
 spring:
@@ -61,6 +63,8 @@ app:
   security:
     firebase:
       audience: ${FIREBASE_PROJECT_ID}
+  cors:
+    allowed-origins: https://app.example.com,https://www.app.example.com
 management:
   endpoints.web.exposure.include: health,info
 logging:
@@ -99,6 +103,8 @@ app:
   security:
     firebase:
       audience: ${FIREBASE_PROJECT_ID}
+  cors:
+    allowed-origins: http://localhost:4200
 logging:
   level:
     root: INFO
