--- a/pom.xml
+++ b/pom.xml
@@ -185,17 +185,21 @@
 							<version>${org.mapstruct.version}</version>
 						</path>
                         <path>
-                          <groupId>org.projectlombok</groupId>
-                          <artifactId>lombok</artifactId>
-                          <version>1.18.36</version>
+                        	<groupId>org.projectlombok</groupId>
+                        	<artifactId>lombok</artifactId>
+                    		<version>1.18.36</version>
                         </path>
                         <path>
-                          <groupId>org.projectlombok</groupId>
-                          <artifactId>lombok-mapstruct-binding</artifactId>
-                          <version>0.2.0</version>
+                        	<groupId>org.projectlombok</groupId>
+                        	<artifactId>lombok-mapstruct-binding</artifactId>  
+							<version>0.2.0</version>
                         </path>
 
 					</annotationProcessorPaths>
+
+					<compilerArgs>
+                    	<arg>-Amapstruct.verbose=true</arg>
+                	</compilerArgs>
 				</configuration>
 			</plugin>
 
